# deja

./: .gitignore  README.md  dejaq.py  pyproject.toml  qconfig.template.json  requirements.txt  run_dejaq.sh  setup.py
awsutils/: __init__.py  awsutils.py  q_service.py
dejaq/: cli.py
dejaq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_q_service.py
