[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dejaq"
version = "0.1.0"
description = "A CLI tool for uploading files or adding URLs to AWS Q"
readme = "README.md"
authors = [{name = "Stefano Marzani", email = "your.email@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = ["aws", "q", "cli"]
dependencies = [
    "boto3>=1.26.0",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/yourusername/dejaq"
"Bug Tracker" = "https://github.com/yourusername/dejaq/issues"

[project.scripts]
dejaq = "dejaq.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dejaq*", "awsutils*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
dejaq = ["py.typed"]